# sec-stock-research-skills

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: insider-scan.yml
bottom-up-analyst/: .gitignore  SKILL.md
bottom-up-analyst/references/: guide_competitive.md  guide_valuation.md  memo_template.md
bottom-up-analyst/scripts/: dcf.py  epv.py
market-scout/: .gitignore  SKILL.md
market-scout/scripts/: _common.py  fetch_market_data.py  fetch_transcripts.py
pitch-like-lou/: SKILL.md
sec-edgar-skill/: README.md  SKILL.md
sec-edgar-skill/references/: guide_core.md  guide_holdings.md
sec-edgar-skill/scripts/: _common.py  fetch_13f_holders.py  fetch_filing.py  fetch_filings.py  fetch_insider_trades.py  list_headings.py  orient.py  parse_financials.py  test_setup.py
signal-sweep/: .gitignore  README.md  SKILL.md  requirements.txt  screens.json
signal-sweep/docs/: flip_buy_difficulty_analysis.md
signal-sweep/references/: guide_screens.md
signal-sweep/scripts/: _common.py  scan_conferences.py  scan_insiders.py  scan_market.py  search_themes.py
